trying to fix image issue

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -116,7 +116,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img class="img-to-white" src="/assets/forceps1.png">
+                        <%= image_tag "forceps1.png", class: "img-to-white" %>
+                        <!-- <img class="img-to-white" src="/assets/forceps1.png"> -->
                         <h3>30-50% DECREASE IN THE NEED FOR FORCEPS, VACUUM EXTRACTION, AND PITOCIN</h3>
                         <p class="text-muted"></p>
                     </div>
