continue fixing images

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -95,21 +95,21 @@
             <div class="col-lg-12 text-center">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img class="img-to-white" src="/assets/clock104.png">
+                        <%= image_tag "clock104.png", class: "img-to-white" %>
                         <h3>25% SHORTER LABORS</h3>
                         <p class="text-muted"></p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img class="img-to-white" src="/assets/scalpel.png">
+                        <%= image_tag "scalpel.png", class: "img-to-white" %>
                         <h3>45% FEWER CESAREANS</h3>
                         <p class="text-muted"></p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img class="img-to-white" src="/assets/needle.png">
+                        <%= image_tag "fneedle.png", class: "img-to-white" %>
                         <h3>40% FEWER EPIDURALS</h3>
                         <p class="text-muted"></p>
                     </div>
@@ -117,7 +117,6 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <%= image_tag "forceps1.png", class: "img-to-white" %>
-                        <!-- <img class="img-to-white" src="/assets/forceps1.png"> -->
                         <h3>30-50% DECREASE IN THE NEED FOR FORCEPS, VACUUM EXTRACTION, AND PITOCIN</h3>
                         <p class="text-muted"></p>
                     </div>
