fix last image issue

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <%= image_tag "fneedle.png", class: "img-to-white" %>
+                        <%= image_tag "needle.png", class: "img-to-white" %>
                         <h3>40% FEWER EPIDURALS</h3>
                         <p class="text-muted"></p>
                     </div>
